--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+:root {
+  --purple: #5B21B6;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav {
+  background-color: var(--purple);
+  position        : fixed;
+  top             : 0px;
+  width           : 100%;
+  height          : 80px;
+  z-index         : 1000;
+  box-shadow      : 0 4px 14px 0 rgba(0, 0, 0, 0.15);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-logo {
+  height: 60px;
+  width : 60px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-logo:hover {
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.nav .nav-content {
+  max-width      : 900px;
+  padding        : 0rem 3rem;
+  margin         : 0 auto;
+  display        : flex;
+  justify-content: space-between;
+  align-items    : center;
+  height         : 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-item {
+  display    : inline;
+  margin-left: 2rem;
+  color      : #fff;
+}
+
+.nav-item:hover {
+  color : #93C5FD;
+  cursor: pointer;
+}
+
+.nav-item>.active {
+  /* border-bottom: 1px solid #333;
+   */
+  background: #FBBF24;
+  padding   : 1rem;
+  border-radius: 5px;
+}
+
+
+
+
+.section-one {
+  background: #312E81;
+  color     : white;
+  padding-top: 4rem;
+}
+
+.section-two {
+  background: #D97706;
+  color     : white;
+}
+
+.section-three {
+  background: #065F46;
+  color     : white;
+}
+
+.section-four {
+  background: #1E40AF;
+  color     : white;
+
+}
+
+.section-five {
+  background: #1F2937;
+  color     : white;
+  height: 1800px;
+
+}
+
+.section-content {
+  max-width: 800px;
+  margin   : 0 auto;
+  padding  : 40px;
 }
